--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/reactstrap": "^8.4.3",
     "autoprefixer": "^9.8.4",
     "axios": "^0.19.2",
+    "html-react-parser": "^0.13.0",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
@@ -31,6 +33,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "suneditor-react": "^2.12.5",
     "tailwindcss": "^1.4.6",
     "typescript": "~3.7.2"
   },
