--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^9.8.4",
     "axios": "^0.19.2",
     "html-react-parser": "^0.13.0",
+    "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.1",
