[#9anzqx] Create About Me Page

--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/node": "^12.12.53",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "@types/reactstrap": "^8.4.3",
-    "autoprefixer": "^9.8.4",
+    "@types/reactstrap": "^8.5.0",
+    "autoprefixer": "^9.8.5",
     "axios": "^0.19.2",
     "html-react-parser": "^0.13.0",
     "lodash": "^4.17.19",
@@ -25,17 +27,18 @@
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
+    "randomcolor": "^0.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "latest",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "suneditor-react": "^2.12.5",
-    "tailwindcss": "^1.4.6",
+    "suneditor-react": "^2.13.1",
+    "tailwindcss": "^1.5.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -62,7 +65,7 @@
   },
   "devDependencies": {
     "postcss-scss": "^2.1.1",
-    "sass": "^1.26.9",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.2"
   }
 }
