--- a/package.json
+++ b/package.json
@@ -27,17 +27,19 @@
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
+    "query-string": "^6.13.1",
     "randomcolor": "^0.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "latest",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "suneditor-react": "^2.13.1",
+    "sweetalert2": "^9.17.1",
     "tailwindcss": "^1.5.2",
     "typescript": "~3.7.2"
   },
