--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,4 @@
 {
     "/js/Index.js": "/js/Index.js",
-    "/build/static/css/main.css": "/build/static/css/main.css",
-    "/js/Index.1a217059f0c03975968c.hot-update.js": "/js/Index.1a217059f0c03975968c.hot-update.js",
-    "/js/Index.29ac3cf0fa73933efb73.hot-update.js": "/js/Index.29ac3cf0fa73933efb73.hot-update.js",
-    "/js/Index.4f7f78abcd332f121cae.hot-update.js": "/js/Index.4f7f78abcd332f121cae.hot-update.js",
-    "/js/Index.b744b9b116e12f77ffb5.hot-update.js": "/js/Index.b744b9b116e12f77ffb5.hot-update.js",
-    "/js/Index.e13118615e0936a712c2.hot-update.js": "/js/Index.e13118615e0936a712c2.hot-update.js"
+    "/build/static/css/main.css": "/build/static/css/main.css"
 }
