[#juzm6y] Add PHP test for Invaild Login
Change error type to AxiosError in Blog and Auth Functionality
Rename IComment ts and add Comment Class
Rename IProject ts and add Project class
Rename IStatus ts and add Status class
Rename IToken ts and add Token class
Show user errors if api returns an error.
Add Editable Input Component


Minor Improvements

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,23 @@
 {
     "/js/Index.js": "/js/Index.js",
-    "/build/static/css/main.css": "/build/static/css/main.css"
+    "/build/static/css/main.css": "/build/static/css/main.css",
+    "/js/Index.cfaf4cb120d75621fc14.hot-update.js": "/js/Index.cfaf4cb120d75621fc14.hot-update.js",
+    "/js/Index.066402d008b2a92f43d2.hot-update.js": "/js/Index.066402d008b2a92f43d2.hot-update.js",
+    "/js/Index.f1aa9c5f210c5cff43e7.hot-update.js": "/js/Index.f1aa9c5f210c5cff43e7.hot-update.js",
+    "/js/Index.387163eb7f0e2e8d88e1.hot-update.js": "/js/Index.387163eb7f0e2e8d88e1.hot-update.js",
+    "/js/Index.7f9b802516d2b7c184a9.hot-update.js": "/js/Index.7f9b802516d2b7c184a9.hot-update.js",
+    "/js/Index.2e414208f70d04f9032a.hot-update.js": "/js/Index.2e414208f70d04f9032a.hot-update.js",
+    "/js/Index.0c2953f55dff016c9ef0.hot-update.js": "/js/Index.0c2953f55dff016c9ef0.hot-update.js",
+    "/js/Index.f5c43cd829ab6ea82dfd.hot-update.js": "/js/Index.f5c43cd829ab6ea82dfd.hot-update.js",
+    "/js/Index.422688e1bdb8c3a88f75.hot-update.js": "/js/Index.422688e1bdb8c3a88f75.hot-update.js",
+    "/js/Index.359f33dac17081fdcfaf.hot-update.js": "/js/Index.359f33dac17081fdcfaf.hot-update.js",
+    "/js/Index.4ffde85230f29213b68d.hot-update.js": "/js/Index.4ffde85230f29213b68d.hot-update.js",
+    "/js/Index.b6e09e49511f28a2bab3.hot-update.js": "/js/Index.b6e09e49511f28a2bab3.hot-update.js",
+    "/js/Index.cafd86dbcb9833b5dd89.hot-update.js": "/js/Index.cafd86dbcb9833b5dd89.hot-update.js",
+    "/js/Index.776c59da0cbd2db82cb3.hot-update.js": "/js/Index.776c59da0cbd2db82cb3.hot-update.js",
+    "/js/Index.38eb7029f5f14b1763d7.hot-update.js": "/js/Index.38eb7029f5f14b1763d7.hot-update.js",
+    "/js/Index.ae8ea2c8860402ae3337.hot-update.js": "/js/Index.ae8ea2c8860402ae3337.hot-update.js",
+    "/js/Index.997b74e69eb7e55cbfbb.hot-update.js": "/js/Index.997b74e69eb7e55cbfbb.hot-update.js",
+    "/js/Index.52cd606b859bdfe9c499.hot-update.js": "/js/Index.52cd606b859bdfe9c499.hot-update.js",
+    "/js/Index.4bdb24895a704720a181.hot-update.js": "/js/Index.4bdb24895a704720a181.hot-update.js"
 }
